# car_recognition_bot

./: .gitignore  README.md  env.template  main.py  pyproject.toml  settings.py
logics/: car_plate_number.py  exif_parsing.py  reporting.py  reverse_geocoding.py
